
Crashes:
- Fixed crash when we close kword and "special char dialogbox" is not closed
- Fixed several memory leaks
- Fixed crash when we cancel insert time/date variable.
- Fixed crash when we duplicate page and there was an embedded document.
- Fixed crash when we split view and we try to open menu when factory() is null
- Fixed crash when we didn't select a slide and try to launch presentation

Changes between KPresenter-1.2-RC1 and KPresenter-1.2
=====================================================
Bugfixes:
- Fix undo/redo move object.
- Fix #45966 kpresenter refuses to update image with same name
- Fix #45991: problems w.r.t. font color and bullets
- Fix mouse move event + vertical alignment
- Fix resize to height : Don't create command when it's not necessary.
- Fix availableHeight + vertical alignment
- Fix save variable.
- Fix recalc page number + sticky object
- Fix draw gradient + rectangle object
- Fix presentation mode : Don't draw grid and helpline in this mode
- Fix update ruler tabs when we switch between two text object
- Fix move up/down style
- Fix restore style shortcut when we remove/rename/add style

Changes after KPresenter 1.2
============================
- Use ForbiddenCursor when object is "protect size"
- Spell checker can spellcheck only selection
- Now Shadow is a text properties
- Add "copy link" feature.
- Add "add to bookmark" feature
- We can change "picture path"
- Add "remove link"
- Add font properties : change relative font size when we sub/super script font
- Add support to add offset from baseline
- Now koinsertlink use 'recent document'
- Now "create backup file" is configurable
- Add support to insert cursor directly
- Add support to "word by word" underline/strikeout attribute
- Add new variable : Next page number, previous page number
- Add time/date variable offset
- Fix #24242 add variable : created/modified/printed document date
- Now we can copy text of comment.
- Add support for font attribute