@@ -225,6 +225,8 @@ k_dcop:
     bool insertDirectCursor() const;
     void setInsertDirectCursor(bool _b);
 
+    bool configCapitalizeNameOfDays() const;
+    void setConfigCapitalizeNameOfDays( bool b);
 
 private:
     KWDocument *doc;
