@@ -286,5 +286,6 @@ Changes after KWord-1.2
 - Fix #24242 add variable : created/modified/printed document date
 - Now we can copy text of comment.
 - Add support for convert table to text
-- Add support for font attribute
-
+- Add support for font attribute ( lowercase/uppercase )
+- Add double click on frame => open frame dialogbox
+- Add autocorrection : "Capitalize name of days"
