@@ -132,4 +132,5 @@ Changes after KPresenter 1.2
 - Add time/date variable offset
 - Fix #24242 add variable : created/modified/printed document date
 - Now we can copy text of comment.
-- Add support for font attribute
+- Add support for font attribute ( Uppercase/lowercase )
+- Add autocorrection : "Capitalize name of days"
